--- a/views/weekly_overview.pug
+++ b/views/weekly_overview.pug
@@ -21,61 +21,55 @@ block scripts
 block content
     div(class='row')
         div(class='col-sm-6 text-left')
-            button(id='previous-btn' class='btn btn-primary' data-current-date=weekly.from) << Previous
+            button(id='previous-btn' class='btn btn-primary' data-current-date=statistics.from) << Previous
         div(class='col-sm-6 text-right')
-            button(id='next-btn' class='btn btn-primary' data-current-date=weekly.to) Next >>
+            button(id='next-btn' class='btn btn-primary' data-current-date=statistics.to) Next >>
 
     div(class='col-lg-14')
         div(class='row')
-            h2= "Statistics (" + weekly.from + " to " + weekly.to + ")"
+            h2= "Statistics (" + statistics.from + " to " + statistics.to + ")"
 
-            mixin create_statistics_table(id, statistics)
-                if statistics.length === 0
-                    p No matches played ...
-                else
-                    div(class='table-responsive')
-                        table(id=id class='table table-striped table-bordered')
-                            thead
+            if statistics.length === 0
+                p No matches played ...
+            else
+                div(class='table-responsive')
+                    table(id='current_week_statistics_table' class='table table-striped table-bordered')
+                        thead
+                            tr
+                                th(colspan='7')
+                                th(colspan='4') Per Game
+                                th(colspan='3') Accuracy              
+                            tr
+                                th Rank
+                                th Player
+                                th Played
+                                th Won
+                                th Win %                        
+                                th PPD / First 9
+                                th Checkout %
+                                th 60s+
+                                th 100s+
+                                th 140s+
+                                th 180
+                                th Overall
+                                th 20s
+                                th 19s
+                        tbody
+                            - var rank = 1
+                            each stats in statistics
+                                - var player = players[stats.player_id]
                                 tr
-                                    th(colspan='7')
-                                    th(colspan='4') Per Game
-                                    th(colspan='3') Accuracy              
-                                tr
-                                    th Rank
-                                    th Player
-                                    th Played
-                                    th Won
-                                    th Win %                        
-                                    th PPD
-                                    th PPD (First 9)
-                                    th 60s+
-                                    th 100s+
-                                    th 140s+
-                                    th 180
-                                    th Overall
-                                    th 20s
-                                    th 19s
-                            tbody
-                                - var rank = 1
-                                each stats in statistics
-                                    tr
-                                        td= rank++
-                                        td(style='width: 12%'): a(href='/player/' + stats.player_id + '/stats')= stats.player_name
-                                        td= stats.games_played
-                                        td= stats.games_won === undefined ? 0 : stats.games_won
-                                        td= stats.games_won === undefined ? 0 : (stats.games_won / stats.games_played * 100).toFixed(2)
-                                        td= stats.ppd.toFixed(2)
-                                        td(style='width: 12%')= stats.first_nine_ppd.toFixed(2)
-                                        td= stats['60s_plus'] == 0 ? 0 : (stats['60s_plus'] / stats.games_played).toFixed(2)
-                                        td= stats['100s_plus'] == 0 ? 0 : (stats['100s_plus'] / stats.games_played).toFixed(2)
-                                        td= stats['140s_plus'] == 0 ? 0 : (stats['140s_plus'] / stats.games_played).toFixed(2)
-                                        td= stats['180s'] == 0 ? 0 : (stats['180s'] / stats.games_played).toFixed(2)
-                                        td= stats.overall_accuracy === null ? '-' : stats.overall_accuracy.toFixed(2)
-                                        td= stats.accuracy_20 === null ? '-' : stats.accuracy_20.toFixed(2)
-                                        td= stats.accuracy_19 === null ? '-' : stats.accuracy_19.toFixed(2)
-
-            +create_statistics_table('current_week_statistics_table', weekly.this_week)
-                    
-            if weekly.last_week            
-                h3 Last Week
-                    +create_statistics_table('last_week_statistics_table', weekly.last_week)
+                                    td= rank++
+                                    td(style='width: 12%'): a(href='/player/' + player.id + '/stats')= player.name
+                                    td= stats.games_played
+                                    td= stats.games_won === undefined ? 0 : stats.games_won
+                                    td= stats.games_won === undefined ? 0 : (stats.games_won / stats.games_played * 100).toFixed(2)
+                                    td= stats.ppd.toFixed(2) + ' / ' + stats.first_nine_ppd.toFixed(2)
+                                    td(style='width: 12%')= stats.checkout_percentage.toFixed(2)
+                                    td= stats.scores_60s_plus.toFixed(2) / stats.games_played
+                                    td= stats.scores_100s_plus.toFixed(2) / stats.games_played
+                                    td= stats.scores_140s_plus.toFixed(2) / stats.games_played
+                                    td= stats.scores_180s.toFixed(2) / stats.games_played
+                                    td= stats.accuracy_overall === null ? '-' : stats.accuracy_overall.toFixed(2)
+                                    td= stats.accuracy_20 === null ? '-' : stats.accuracy_20.toFixed(2)
+                                    td= stats.accuracy_19 === null ? '-' : stats.accuracy_19.toFixed(2)
